--- a/Crew/css/crew.css
+++ b/Crew/css/crew.css
@@ -13,29 +13,13 @@ html {
 .crew a{
   text-decoration:none;
   color:black;
-  opacity:0.7;
   position: relative;
-}
-
-.crew-photo-div:before{
-  content: "";
-  position: absolute;
-  width: 80%;
-  height: 2px;
-  bottom: 0;
-  left: 10;
-  background-color: #000;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: all 0.3s ease-in-out 0s;
-  padding-bottom: 3px;
 }
 
 .crew-photo-div:hover::before {
   visibility: visible;
   transform: scaleX(1);
 }
-
 
 .crew .name{
   text-align:center;
@@ -55,6 +39,23 @@ html {
 .crew .headshot{
   align:center;
 }
+
+@media only screen and (min-width: 770px) {
+  .crew-photo-div:before{
+    content: "";
+    position: absolute;
+    width: 80%;
+    height: 2px;
+    bottom: 0;
+    left: 10;
+    background-color: #000;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+    padding-bottom: 3px;
+  }
+}
+
 @media only screen and (min-width: 770px) {
   .crew .headshot{
     opacity:0.9;
